# carla_alpamayo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
ad_stack/: __init__.py  api.py  expert_config.py  inference.py  run.py
data_collection/: __init__.py
docs/: AD_STACK_ARCHITECTURE.md  AD_STACK_SINGLE_ENTRYPOINT_PLAN.md  DIRECTORY_RELATIONSHIPS.md  EXPERT_POLICY_DESIGN.md  EXPERT_POLICY_REQUIREMENTS.md  MIGRATION_ACCEPTANCE_CRITERIA.md  OVERTAKE_ARCHITECTURE_CURRENT_ISSUES.md  OVERTAKE_ARCHITECTURE_REFACTOR_PLAN.md  OVERTAKE_EXPERT_REQUIREMENTS.md  OVERTAKE_PARAMETER_TUNING_GUIDE.md  PERSONAL_PROJECT_PLAN.md  PLANNING_CONTROLLER_ARCHITECTURE.md  PLANNING_CONTROLLER_REFACTOR_PLAN.md  PLANNING_CONTROLLER_TARGET_ARCHITECTURE.md  PLANNING_CONTROLLER_TEST_REFACTOR_PLAN.md  STOPPED_OBSTACLE_DEVELOPMENT_PLAN.md  STOPPED_OBSTACLE_LOGIC_DESIGN.md  STOPPED_OBSTACLE_OPPOSITE_LANE_OCCUPANCY_TEST_DESIGN.md  STOPPED_OBSTACLE_SCENARIO_CONTRACT_DESIGN.md  STOPPED_OBSTACLE_SCENARIO_CONTRACT_TEST_DESIGN.md  STOPPED_OBSTACLE_TEST_DESIGN.md  TOWN01_CAMERA_E2E_RESULTS.md  TOWN01_CURVE_COLLECTION_PLAN.md  TOWN01_INTERSECTION_ATTEMPTS_SUMMARY.md  TOWN01_INTERSECTION_GOAL.md  TOWN01_JUNCTION_COLLECTION_PLAN.md  TOWN01_LEFT_COLLECTION_PLAN.md  TOWN01_MAINLINE_REPRO.md  TOWN01_MOVEMENT_COVERAGE.md  TOWN01_OVERTAKE_PARAMETER_DECISIONS.md  TOWN01_PILOTNET_ROUTE.md  VLA_SCENARIO_SCOPE.md
evaluation/: __init__.py
learning/: __init__.py
libs/: __init__.py  project.py
pipelines/: __init__.py
scripts/: build_correction_windows.py  build_long_support_routes.py  (+26 more)
(+589 files in other folders)
