[project]
name = "carla-alpamayo"
version = "0.1.0"
description = "Personal CARLA workspace for data collection, E2E experiments, and route tooling."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "carla",
    "matplotlib>=3.10.8",
    "mcap>=1.3.0",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pillow>=12.1.1",
    "shapely>=2.1.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
carla = { path = "../../../../home/masa/sim/carla-0.9.16/PythonAPI/carla/dist/carla-0.9.16-cp310-cp310-manylinux_2_31_x86_64.whl" }
